# monkey-skills

./: .gemini_todos.md  .gitattributes  .gitignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  GEMINI.md  README.ja.md  README.md  README.zh-TW.md  gemini-extension.json  marketplace.json  plugin.json
deep-research/: .gitignore  pyproject.toml
deep-research/.claude-plugin/: plugin.json
deep-research/skills/deep-research/: SKILL.md
deep-research/src/deep_research/: adapters.py  cli.py  core.py  dedup.py  mcp_server.py  pipeline.py  prompts.py  providers.py  rank.py  schemas.py
deep-research/tests/: test_adapters.py  test_cli.py  test_core.py  test_core_degradation.py  test_dedup.py  test_mcp_server.py  test_package.py  test_pipeline.py  test_prompts.py  test_providers.py  test_rank.py  test_schemas.py
obsidian/: CHANGELOG.md  README.ja.md  README.md  README.zh-TW.md  pyproject.toml
obsidian/.claude-plugin/: plugin.json
obsidian/.codex-plugin/: plugin.json
obsidian/commands/: obsidian.md  wiki-auto-research.md  wiki-cross-linker.md  wiki-ingest.md  wiki-lint.md  wiki-query.md  wiki-setup.md
obsidian/scripts/: distribute.py  test_distribute.py  test_verify_drift.py  verify-drift.py
obsidian/skills/: README.ja.md  README.md  README.zh-TW.md
obsidian/skills/daily-news-digest/: SKILL.md
obsidian/skills/dashboard-design/: README.ja.md  README.md  README.zh-TW.md
obsidian/skills/defuddle/: SKILL.md
obsidian/skills/obsidian-bases/: LICENSE  SKILL.md
obsidian/skills/obsidian-canvas-creator/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
obsidian/skills/obsidian-cli/: SKILL.md
obsidian/skills/obsidian-excalidraw-diagram/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
obsidian/skills/obsidian-markdown/: README.ja.md  README.md  README.zh-TW.md  SKILL.md
obsidian/skills/obsidian-mermaid-visualizer/: README.ja.md  README.md  README.zh-TW.md  SKILL.md  obsidian-common-quirks.md  obsidian-compatibility.md
obsidian/skills/obsidian-vault-setup/: SKILL.md
obsidian/skills/using-obsidian/: SKILL.md
obsidian/skills/using-obsidian-team/: SKILL.md
obsidian/skills/wiki-auto-research/: SKILL.md
obsidian/skills/wiki-cross-linker/: SKILL.md
obsidian/skills/wiki-ingest/: SKILL.md
obsidian/skills/wiki-lint/: SKILL.md
obsidian/skills/wiki-merge/: SKILL.md
obsidian/skills/wiki-query/: SKILL.md
obsidian/skills/wiki-setup/: SKILL.md
obsidian/skills/wiki-update/: SKILL.md
obsidian/tests/wiki_ingest/: test_select_batch.py  test_select_batch_smoke.py
(+4465 files in other folders)
