[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.12"
# Core (L1) has zero hard runtime deps — it depends only on stdlib + injected
# provider Protocols. Capability is an opt-in extra:
#   anthropic / search → L2 reference adapters.
dependencies = []

[project.scripts]
deep-research = "deep_research.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic"]
search = ["httpx"]
dev = ["pytest", "pytest-asyncio", "anthropic", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
