[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian"
version = "3.10.0"
description = "Obsidian vault workflows — daily notes, markdown, bases, diagrams, canvas, file intel, vault management, dashboard design. Plus an LLM wiki knowledge-distillation layer."
requires-python = ">=3.10"
authors = [
    {name = "kouko", email = "kouko.d@gmail.com"}
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
